src/objects/Open_Opportunity_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Open Opportunity Settings</description>
    <fields>
        <fullName>Days_Not_Updated_Limit_Early_Stages__c</fullName>
        <defaultValue>10</defaultValue>
        <description>If Days not Updated field is greater than this value, the row will be colored red.</description>
        <inlineHelpText>If Days not Updated field is greater than this value, the row will be colored red. 
Applies for Stages 1&amp; 2</inlineHelpText>
        <label>Days Not Updated Limit Early Stages</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Not_Updated_Limit__c</fullName>
        <defaultValue>30</defaultValue>
        <description>If Days not Updated field is greater than this value, the row will be colored red.</description>
        <inlineHelpText>If Days not Updated field is greater than this value, the row will be colored red.
Applies for Stages 3 +</inlineHelpText>
        <label>Days Not Updated Limit Late Stages</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Email_Recipient__c</fullName>
        <description>Default Email Recipient</description>
        <label>Default Email Recipient</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <label>Open Opportunity Settings</label>
</CustomObject>